# ziex_zig-vs-leptos_rust

./: .gitignore  LICENSE  README.md  bench.sh  docker-compose.yml
leptos-app/: Cargo.toml  Dockerfile
leptos-app/src/: main.rs
results/: leptos.json  ziex.json
ziex-app/: .dockerignore  Dockerfile  build.zig
ziex-app/app/: SsrPage.zx  main.zig
ziex-app/app/pages/: layout.zx  notfound.zx  page.zx
