[package]
name = "leptos-app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", default-features = false, features = ["ssr"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
