[package]
name = "leptos-app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["ssr"] }
leptos_router = { version = "0.8", features = ["ssr"] }
leptos_actix = "0.8"
actix-web = "4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
